tests/fixtures/invalid/InvalidEmptyBody.php
<?php

namespace App;

class InvalidEmptyBody
{
    public function doNothing()
    {
    }
}
